--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -1,30 +1,43 @@
 .navbar {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  .nav-links {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .nav-links li {
-    display: inline;
-  }
-  
-  .nav-links a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  .nav-links a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  top: -50px; /* Initially hidden above the viewport */
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
+}
+
+.navbar.visible {
+  top: 0; /* Slide down into view */
+}
+
+.nav-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-links li {
+  display: inline;
+}
+
+.nav-links a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+.nav-links a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.nav-links .active a {
+  background-color: #04AA6D;
+  color: white;
+}
