--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,15 @@ section {
   height: 100vh;
 }
 
-#about {
+#home {
   background-color: #f4f4f4;
 }
 
-#portfolio {
+#about {
   background-color: #e2e2e2;
 }
 
-#skills {
+#portfolio {
   background-color: #d0d0d0;
 }
 
