--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,37 @@ section {
   background-color: #d0d0d0;
 }
 
+#projects-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#project-1 {
+  background-color: aqua;
+  height: 50vh;
+  width: 25vh;
+}
+
+#project-2 {
+  background-color: rgb(79, 185, 185);
+  height: 50vh;
+  width: 25vh;
+}
+
+#project-3 {
+  background-color: rgb(54, 107, 107);
+  height: 50vh;
+  width: 25vh;
+}
+
+#project-4 {
+  background-color: rgb(7, 48, 48);
+  height: 50vh;
+  width: 25vh;
+}
+
+
 #contact {
   background-color: #bebebe;
 }
