--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -4,6 +4,8 @@ form {
     padding: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
 }
 
 div {
@@ -13,6 +15,8 @@ div {
 label {
     display: block;
     margin-bottom: 0.5rem;
+    font-family: inherit;
+    font-size: inherit;
 }
 
 input, textarea {
@@ -20,6 +24,8 @@ input, textarea {
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 3px;
+    font-family: inherit;
+    font-size: inherit;
 }
 
 button {
@@ -31,8 +37,18 @@ button {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    font-family: inherit;
+    font-size: inherit;
 }
 
 button:hover {
     background-color: #218838;
+}
+
+p {
+    color: green;
+    font-weight: bold;
+    text-align: center;
+    font-family: inherit;
+    font-size: inherit;
 }
