--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,19 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
   font-family: Arial, sans-serif;
+  scroll-snap-type: y mandatory; /* Enable vertical snap scrolling */
+  height: 100vh; /* Ensure full viewport height for the container */
+  margin: 0; /* Remove default margins */
 }
 
 section {
   padding: 100px 20px;
-  height: 100vh;
+  height: 100vh; /* Full viewport height for each section */
+  scroll-snap-align: start; /* Snap to the start of each section */
 }
 
 #home {
@@ -65,7 +73,6 @@ section {
   height: 50vh;
   width: 25vh;
 }
-
 
 #contact {
   background-color: #bebebe;
