--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #333;
+  background-color: #E6E8E6;
   overflow: hidden;
   position: fixed;
   width: 100%;
@@ -17,7 +17,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: end;
 }
 
 .nav-links li {
@@ -26,7 +26,7 @@
 
 .nav-links a {
   display: block;
-  color: white;
+  color: #080708;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
@@ -34,10 +34,10 @@
 
 .nav-links a:hover {
   background-color: #ddd;
-  color: black;
+  color: #FDCA40;
 }
 
 .nav-links .active a {
-  background-color: #04AA6D;
+  background-color: #DF2935;
   color: white;
 }
