--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,19 @@ section {
   height: 100vh;
   scroll-snap-align: start;
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
 #home {
   background-color: #E6E8E6;
+  justify-content: center;
 }
 
 #home-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  column-gap: 10vh;
 }
 
 #name-title-container {
@@ -64,11 +64,13 @@ section {
 #about {
   background-color: #E6E8E6;
   flex-direction: column;
+  justify-content: center;
 }
 
 #portfolio {
   background-color: #E6E8E6;
   flex-direction: column;
+  justify-content: center;
 }
 
 #projects-container {
@@ -104,4 +106,5 @@ section {
 #contact {
   background-color: #E6E8E6;
   flex-direction: column;
+  justify-content: center;
 }
