--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -52,3 +52,10 @@ p {
     font-family: inherit;
     font-size: inherit;
 }
+
+#labels-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
