--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,20 @@ html {
 
 section {
   padding: 0px 20px;
-  height: 100vh;
   scroll-snap-align: start;
   display: flex;
   align-items: center;
   height: 100vh;
 }
 
-#home {
-  background-color: #E6E8E6;
-  justify-content: center;
+#portfolio {
+  padding: 0px 20px;
+  scroll-snap-align: start;
+  display: flex;
+  align-items: center;
+  height: auto;
 }
+
 
 #home-container {
   display: flex;
@@ -55,7 +58,6 @@ section {
   font-weight: 800;
   font-style: normal;
 }
-
 
 #my-pic {
   width: 50vh;
@@ -106,5 +108,25 @@ section {
 #contact {
   background-color: #E6E8E6;
   flex-direction: column;
+  justify-content: center;
+}
+
+#home {
+  background-color: #0ae10a;
+  justify-content: center;
+}
+
+#about {
+  background-color: #1730ed;
+  justify-content: center;
+}
+
+#portfolio {
+  background-color: #d1ea12;
+  justify-content: center;
+}
+
+#contact {
+  background-color: #ff6600;
   justify-content: center;
 }
