--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -1,26 +1,38 @@
 form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    max-width: 700px;
+    /* margin: 0 auto; */
+    padding: 2rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-family: Arial, sans-serif;
     font-size: 16px;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
 div {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
-label {
-    display: block;
-    margin-bottom: 0.5rem;
+/* label {
+    display: flex;
+    margin-bottom: 0.3rem;
     font-family: inherit;
     font-size: inherit;
-}
+} */
 
 input, textarea {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 250px;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -28,8 +40,15 @@ input, textarea {
     font-size: inherit;
 }
 
+textarea {
+    resize: none;
+    width: 250px;
+}
+
+
 button {
-    display: block;
+    display: flex;
+    justify-content: center;
     width: 100%;
     padding: 0.7rem;
     background-color: #28a745;
@@ -45,17 +64,19 @@ button:hover {
     background-color: #218838;
 }
 
-p {
+/* p {
     color: green;
     font-weight: bold;
     text-align: center;
     font-family: inherit;
     font-size: inherit;
-}
+} */
 
 #labels-container {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
 }
+
+
