--- a/src/Components/ContactLinks/contactLinks.css
+++ b/src/Components/ContactLinks/contactLinks.css
@@ -3,10 +3,9 @@
     flex-direction: column;
     gap: 20pt;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
     width: 10%;
   }
-  
   
   .contact-links-logo {
     max-width: 5%;
@@ -14,4 +13,8 @@
     min-width: 50pt;
   }
   
-  
+  div > a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
