--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -1,4 +1,5 @@
 form {
+    position: relative;
     display: flex;
     flex-direction: column;
     max-width: 700px;
@@ -9,6 +10,7 @@ form {
     font-family: Arial, sans-serif;
     font-size: 16px;
     gap:20px;
+    margin-left: 9%;
 }
 
 form > ul {
@@ -69,19 +71,27 @@ button:hover {
     color: #080708;
 }
 
-/* p {
-    color: green;
-    font-weight: bold;
-    text-align: center;
-    font-family: inherit;
-    font-size: inherit;
-} */
+@media (max-width: 615px) { 
+    form {
+        border: none;
+        margin-left: 0%;
+    }
 
-#labels-container {
+    input, textarea {
+        width: 300px;
+    }
+
+    textarea {
+        resize: none;
+        height: 70px;
+    }
+}
+
+/* #labels-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-}
+} */
 
 
