--- a/src/Components/ProjectCards/projectCards.css
+++ b/src/Components/ProjectCards/projectCards.css
@@ -24,6 +24,31 @@
     padding: 15px;
     text-align: center;
   }
+
+
+  .project-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+  }
+  
+  .project-card:hover,
+  .project-card:focus {
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    /* color: rgba(0, 0, 0, 0.65); */
+  }
+  
+  .project-card:hover {
+    transform: translateY(-10px);
+  }
+  
+  .project-card:active {
+    background-color: #F0F0F1;
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+    /* color: rgba(0, 0, 0, 0.65); */
+    transform: translateY(0);
+  }
+  
   
   .project-image {
     width: 100%;
@@ -40,6 +65,7 @@
     font-size: 0.8em;
     color: #666;
     margin-bottom: 15px;
+    text-align: start;
   }
   
   .project-link {
