#4 #7 Home section update

--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -51,7 +51,7 @@ textarea {
     height: 100px;
 }
 
-button {
+#submit-button {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -66,7 +66,7 @@ button {
     font-weight: 500;
 }
 
-button:hover {
+#submit-button:hover {
     background-color: #f5b400;
     color: #080708;
 }
