--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html {
 }
 
 .App {
-  text-align: center;
+  /* text-align: center; */
   font-family: Arial, sans-serif;
   scroll-snap-type: y mandatory;
   height: 100vh;
@@ -30,19 +30,43 @@ section {
 #home-container {
   display: flex;
   flex-direction: row;
-  column-gap: 10vh;
-  row-gap: 5vh;
+  /* row-gap: 5vh; */
   align-items: center;
 }
 
-
 #name-title-container {
+  border-radius: 25px;
+  margin: 10px;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+
+/* @media (min-width: 768px) {
+  #name-title-container {
+      min-width: 500px;
+  }
+} */
+
+/* #name-title-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+} */
+
+@media (min-width: 768px) {
+  #name {
+      font-size: 40px;
+      line-height: 47px;
+  }
 }
 
-#name {
+
+/* #name {
   font-size: 10vh;
   color: transparent;
   background-color: #3772FF;
@@ -51,7 +75,7 @@ section {
   font-family: "Permanent Marker", cursive;
   font-weight: 800;
   font-style: normal;
-}
+} */
 
 #contact-container {
   display: flex;
@@ -69,17 +93,59 @@ section {
   }
 }
 
-#job-title{
+
+#job-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 151.34%;
+}
+
+/* #job-title{
   font-size: 10vh;
   color: #080708;
   font-family: "Permanent Marker", cursive;
   font-weight: 800;
   font-style: normal;
-}
+} */
 
-#my-pic {
+/* #my-pic {
+  max-width: 200px;
+  max-height: 460px;
   width: 303.5px;
   height: 303.5px;
+  border-radius: 24px;
+  object-fit: cover;
+} */
+
+#my-pic {
+  border-radius: 24px;
+  margin: 10px;
+  object-fit: cover;
+  width: calc(100% - 40px);
+  height: 40vh;
+  /* min-height: 300px;
+  max-height: 400px; */
+}
+
+@media (min-width: 768px) {
+  #my-pic {
+      width: calc(40vw - 40px);
+      min-width: 200px;
+      max-width: 460px;
+      height: 500px;
+      max-height: 570px;
+  }
+}
+
+@media (min-width: 681px) and (max-width: 767px) { 
+  #my-pic{
+    width: calc(40vw - 40px);
+    min-width: 200px;
+    max-width: 460px;
+    height: 500px;
+    max-height: 570px;
+  }
 }
 
 #about {
@@ -135,22 +201,6 @@ section {
   justify-content: center;
 }
 
-@media (max-width: 680px) { 
-  #home-container {
-    flex-direction: column;
-  }
-  #name{
-    font-size: 8vh;
-  }
-  #job-title{
-    font-size: 8vh;
-  }
-  #my-pic{
-    width: 200px;
-    height: 200px;
-  }
-}
-
 footer {
   padding-top: 50px;
   display: flex;
@@ -173,3 +223,61 @@ footer {
     padding-top: 20px;
   }
 }
+
+#contact-button {
+  display: flex;
+  justify-content: center;
+  width: 170px;
+  padding: 0.7rem;
+  background-color: #080708;
+  color: #fff;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+#contact-button:hover {
+  background-color: #292329;
+  color: #ffffff;
+}
+
+@media (max-width: 680px) { 
+  #home-container {
+    flex-direction: column;
+  }
+
+  #name{
+    font-size: 15px;
+  }
+
+  #job-title{
+    font-size: 15px;
+  }
+
+  #name-title-container {
+    order: 2;
+    border-radius: 25px;
+    margin: 10px;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+
+  #contact-button {
+    width: 100%;
+  }
+
+  #my-pic{
+    order: 1;
+  }
+}
+
+/* #about-p {
+  box-sizing: content-box;
+} */
