--- a/src/App.css
+++ b/src/App.css
@@ -202,7 +202,7 @@ section {
 }
 
 footer {
-  padding-top: 50px;
+  padding-top: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -218,11 +218,11 @@ footer {
   text-decoration: none;
 }
 
-@media (max-width: 615px) { 
+/* @media (max-width: 615px) { 
   footer {
-    padding-top: 20px;
+    padding-top: 10%;
   }
-}
+} */
 
 #contact-button {
   display: flex;
