--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -1,15 +1,10 @@
 .navbar {
   background-color: #E6E8E6;
-  overflow: hidden;
   position: fixed;
   width: 100%;
-  top: -35px; /* Initially hidden above the viewport */
+  top: 0; /* Keep the navbar at the top */
   z-index: 1000;
-  transition: top 0.3s ease-in-out;
-}
-
-.navbar.visible {
-  top: 0; /* Slide down into view */
+  transition: none; /* Remove the sliding transition */
 }
 
 .nav-links {
@@ -28,16 +23,17 @@
   display: block;
   color: #080708;
   text-align: center;
-  padding: 14px 20px;
+  padding: 8px 15px;
   text-decoration: none;
+  font-size: 15px;
 }
 
 .nav-links a:hover {
   background-color: #ddd;
-  color: #FDCA40;
 }
 
+
 .nav-links .active a {
-  background-color: #DF2935;
-  color: white;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
 }
