--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ section {
 } */
 
 #my-pic {
-  border-radius: 24px;
+  border-radius: 15px;
   margin: 10px;
   object-fit: cover;
   width: calc(100% - 40px);
@@ -232,15 +232,16 @@ footer {
   background-color: #080708;
   color: #fff;
   border: none;
-  border-radius: 30px;
+  border-radius: 5px;
   cursor: pointer;
   font-family: inherit;
   font-size: 14px;
   font-weight: 500;
+  transition: 0.3s ease;
 }
 
 #contact-button:hover {
-  background-color: #292329;
+  background-color: #0056b3;
   color: #ffffff;
 }
 
