--- a/src/Components/ProjectCards/projectCards.css
+++ b/src/Components/ProjectCards/projectCards.css
@@ -23,13 +23,14 @@
     width: 300px;
     padding: 15px;
     text-align: center;
+    transition: 0.3s ease
   }
 
 
-  .project-card {
+  /* .project-card {
     transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
   }
-  
+   */
   .project-card:hover,
   .project-card:focus {
     border-color: rgba(0, 0, 0, 0.15);
@@ -38,7 +39,7 @@
   }
   
   .project-card:hover {
-    transform: translateY(-10px);
+    background-color: #ffe7a4;
   }
   
   .project-card:active {
@@ -72,7 +73,8 @@
     display: inline-block;
     text-decoration: none;
     color: white;
-    background-color: #007bff;
+    background-color: #080708;
+    font-size: 16px;
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s;
