--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@ html {
   /* text-align: center; */
   font-family: Arial, sans-serif;
   scroll-snap-type: y mandatory;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 section {
@@ -16,15 +18,20 @@ section {
   scroll-snap-align: start;
   display: flex;
   align-items: center;
-  height: 100vh;
+  justify-content: start;
+  /* height: 100vh; */
 }
 
 #portfolio {
-  padding: 0px 20px;
+  /* padding: 0px 20px; */
   scroll-snap-align: start;
   display: flex;
   align-items: center;
   height: auto;
+  background-color: #E6E8E6;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 100vh;
 }
 
 #home-container {
@@ -32,6 +39,8 @@ section {
   flex-direction: row;
   /* row-gap: 5vh; */
   align-items: center;
+  height: 100vh;
+  width: 75vw;
 }
 
 #name-title-container {
@@ -79,10 +88,10 @@ section {
 
 #contact-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* row-gap: 20px; */
+  row-gap: 3rem;
   column-gap: 0%;
 }
 
@@ -97,7 +106,7 @@ section {
 #job-title {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 151.34%;
 }
 
@@ -151,13 +160,15 @@ section {
 #about {
   background-color: #E6E8E6;
   flex-direction: column;
-  justify-content: center;
+  min-height: 80vh;
+  /* justify-content: start; */
 }
 
-#portfolio {
-  background-color: #E6E8E6;
-  flex-direction: column;
-  justify-content: center;
+#about-p {
+  width: 70%;
+  font-size: 18px;
+  text-wrap: stable;
+  line-height: 30px;
 }
 
 #projects-container {
@@ -193,7 +204,8 @@ section {
 #contact {
   background-color: #E6E8E6;
   flex-direction: column;
-  justify-content: center;
+  /* min-height: 100vh; */
+  /* justify-content: center; */
 }
 
 #home {
@@ -202,13 +214,15 @@ section {
 }
 
 footer {
-  padding-top: 10%;
+  margin-top: 3%;
+  margin-bottom: 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 12px;
   font-family: inherit;
   text-decoration: none;
+  background-color: #E6E8E6;
 }
 
 #footer-repo-link{
@@ -248,6 +262,7 @@ footer {
 @media (max-width: 680px) { 
   #home-container {
     flex-direction: column;
+    justify-content: center;
   }
 
   #name{
@@ -276,6 +291,10 @@ footer {
 
   #my-pic{
     order: 1;
+  }
+
+  #about-p {
+    font-size: 15px;
   }
 }
 
