--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -10,7 +10,7 @@ form {
     font-family: Arial, sans-serif;
     font-size: 16px;
     gap:20px;
-    margin-left: 9%;
+    /* margin-left: 9%; */
 }
 
 form > ul {
@@ -20,6 +20,10 @@ form > ul {
     list-style: none;
     padding: 0;
     margin: 0;
+  }
+
+  #contact-title {
+    text-align: center;
   }
 
 /* div {
