--- a/src/Components/ContactForm/contactForm.css
+++ b/src/Components/ContactForm/contactForm.css
@@ -7,10 +7,11 @@ form {
     padding: 1.1rem;
     border: 1px solid #ccc;
     border-radius: 10px;
-    font-family: Arial, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 16px;
     gap:20px;
     /* margin-left: 9%; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 form > ul {
@@ -78,8 +79,9 @@ textarea {
 
 @media (max-width: 615px) { 
     form {
-        border: none;
+        /* border: none; */
         margin-left: 0%;
+        /* box-shadow: none; */
     }
 
     input, textarea {
