--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@ section {
       max-width: 460px;
       height: 500px;
       max-height: 570px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -154,6 +155,7 @@ section {
     max-width: 460px;
     height: 500px;
     max-height: 570px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -220,14 +222,14 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
   font-family: inherit;
   text-decoration: none;
   background-color: #E6E8E6;
 }
 
 #footer-repo-link{
-  font-size: 12px;
+  font-size: 14px;
   font-family: inherit;
   color: #080708;
   text-decoration: none;
@@ -292,6 +294,7 @@ footer {
 
   #my-pic{
     order: 1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   #about-p {
