--- a/src/Components/ProjectCards/projectCards.css
+++ b/src/Components/ProjectCards/projectCards.css
@@ -27,27 +27,20 @@
     padding: 1.1rem;
   }
 
-
-  /* .project-card {
-    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
-  }
-   */
   .project-card:hover,
   .project-card:focus {
     border-color: rgba(0, 0, 0, 0.15);
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-    /* color: rgba(0, 0, 0, 0.65); */
   }
   
   .project-card:hover {
-    background-color: #ffffff;
+    transform: scale(1.03);
   }
   
   .project-card:active {
     background-color: #F0F0F1;
     border-color: rgba(0, 0, 0, 0.15);
     box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
-    /* color: rgba(0, 0, 0, 0.65); */
     transform: translateY(0);
   }
   
