--- a/src/Components/ContactLinks/contactLinks.css
+++ b/src/Components/ContactLinks/contactLinks.css
@@ -1,40 +1,111 @@
 .contact-links-container {
-    display: flex;
+  display: flex;
+  flex-direction: row;
+  gap: 20pt;
+  align-items: center;
+  justify-content: center;
+  width: 10%;
+}
+
+.contact-links-logo {
+  max-width: 5%;
+  border: none;
+  min-width: 50pt;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.email-logo {
+  height: 66.66px;
+  width: 66.66px;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.contact-links-logo:hover {
+  transform: scale(1.05);
+}
+
+.email-logo:hover {
+  transform: scale(1.05);
+}
+
+
+div > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Container for the button and tooltip */
+.email-button-container {
+  position: relative;
+  display: inline-block;
+  height: 66.66px;
+  width: 66.66px;
+}
+
+/* Tooltip styling */
+.email-tooltip {
+  position: absolute;
+  bottom: 100%; /* Position above the button */
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 8px;
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  white-space: nowrap;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Show the tooltip */
+.email-tooltip.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.copy-email-btn {
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  outline: none;
+  height: 66.66px;
+  width: 66.66px;
+}
+
+@media (max-width: 615px) {
+  .contact-links-container {
     flex-direction: row;
-    gap: 20pt;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
+    margin-left: 0%;
   }
-  
+
   .contact-links-logo {
     max-width: 5%;
     border: none;
-    min-width: 50pt;
-    cursor: pointer;
-    transition: 0.3s ease;
+    min-width: 35pt;
   }
 
-  .contact-links-logo:hover {
-    transform: scale(1.05);
-}
+  .email-button-container{
+    height: 46.66px;
+    width: 46.66px;
+  }
 
-  @media (max-width: 615px) { 
-    .contact-links-container {
-      flex-direction: row;
-      margin-left: 0%;
-    }
-
-    .contact-links-logo {
-      max-width: 5%;
-      border: none;
-      min-width: 35pt;
-    }
+  .copy-email-btn{
+    height: 46.66px;
+    width: 46.66px;
   }
   
-
-  div > a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .email-logo {
+    height: 46.66px;
+    width: 46.66px;
   }
+}
