--- a/src/Components/ProjectCards/projectCards.css
+++ b/src/Components/ProjectCards/projectCards.css
@@ -60,7 +60,7 @@
     font-size: 0.8em;
     color: #666;
     margin-bottom: 15px;
-    text-align: start;
+    text-align: center;
   }
   
   .project-link {
